<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#333333"
    android:orientation="horizontal">

    <TextView
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/therapeutic_header"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />


    <TextView
        android:layout_width="60dp"
        android:layout_height="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/action_header"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />

    <TextView
        android:layout_width="155dp"
        android:layout_height="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/drug_impacted_header"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />


    <TextView
        android:layout_width="190dp"
        android:layout_height="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/clinical_interpretation_header"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />

    <TextView
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/gene_header"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/genotype_header"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />

    <TextView
        android:layout_width="132dp"
        android:layout_height="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/phenotype_header"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />

</LinearLayout>