<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#333333"
    android:orientation="horizontal">

    <TextView
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginRight="5dp"
        android:text="@string/header_severity"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />

    <TextView
        android:layout_width="135dp"
        android:layout_height="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="Drugs"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />


    <TextView
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/header_warning"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/header_documentation"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/header_clinical_management"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />

</LinearLayout>