<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#333333"
    android:orientation="horizontal">

    <TextView
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="10dp"
        android:text="@string/gene_header"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />

    <TextView
        android:layout_width="130dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/genotype_header"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />

    <TextView
        android:layout_width="269dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/phenotype_header"
        android:textAlignment="center"
        android:textColor="#d6ca5e"
        android:textStyle="bold" />

</LinearLayout>